--- a/config.tex
+++ b/config.tex
@@ -1,5 +1,5 @@
-%% Configuration for SoI LaTeX Class v1.0
-%% This file contains document-wide configuration settings
+%% Configuration for SoI LaTeX Class v1.1 - Fixed Version
+%% This file contains document-wide configuration settings with enhancements
 
 %% Amendment display settings
 \showamendmentstrue     % Show amendment footnotes
@@ -9,24 +9,33 @@
 % \renewcommand{\amendmentopen}{\{}
 % \renewcommand{\amendmentclose}{\}}
 
-%% Typography customization
+%% Typography customization with improved spacing
 % \renewcommand{\partsize}{\huge}
 % \renewcommand{\articlesize}{\large}
 
-%% Spacing adjustments
+%% Enhanced spacing adjustments for better readability
 \setlength{\parskip}{0.6em plus 0.1em minus 0.1em}
 \setlength{\parindent}{0pt}
 
-%% Footnote customization
-\setlength{\footnotesep}{0.5em}
+%% Improved footnote customization with better spacing
+\setlength{\footnotesep}{0.8em}
+\setlength{\skip\footins}{1.2em plus 0.4em minus 0.2em}
 \renewcommand{\footnotesize}{\small}
 
-%% Page break preferences
+%% Enhanced page break preferences
 \clubpenalty=10000
 \widowpenalty=10000
 \raggedbottom
 
-%% Development mode settings
+%% Two-sided document enhancements
+\geometry{
+    twoside,
+    bindingoffset=0.5cm,
+    inner=3cm,
+    outer=2.5cm
+}
+
+%% Development mode settings with two-sided support
 \makeatletter
 \if@draftmode
     % Additional debug information in draft mode
@@ -37,6 +46,8 @@
         Total Articles: & \thetotalarticles \\
         Total Amendments: & \thetotalamendments \\
         Omitted Articles: & \thetotalomitted \\
+        Document Pages: & \pageref{LastPage} \\
+        Layout: & Two-sided \\
         \end{tabular}
     }
 \fi
@@ -54,7 +65,7 @@
 \newcommand{\PartRef}[1]{Part~#1}
 \newcommand{\ScheduleRef}[1]{Schedule~#1}
 
-%% Amendment citation standards
+%% Enhanced amendment citation standards
 \newcommand{\ConstitutionAmendment}[3]{%
     Constitution (#1 Amendment) Act, #2, s.~#3%
 }
@@ -106,7 +117,7 @@
     \fi
 }
 
-%% Custom page styles for different sections
+%% Enhanced page styles for different sections with two-sided support
 \RequirePackage{fancyhdr}
 
 \fancypagestyle{partpage}{%
@@ -117,8 +128,9 @@
 
 \fancypagestyle{schedulepage}{%
     \fancyhf{}%
-    \fancyhead[L]{\small\leftmark}%
-    \fancyhead[R]{\small\itshape Schedules}%
+    \fancyhead[LE]{\small\leftmark}%
+    \fancyhead[RO]{\small\leftmark}%
+    \fancyhead[LO,RE]{\small\itshape Schedules}%
     \fancyfoot[C]{\thepage}%
 }
 
@@ -127,11 +139,11 @@
 
 %% Prevent page breaks within constitutional elements
 \newcommand{\keepwithfootnote}[1]{%
-    \needspace{3\baselineskip}%
+    \needspace{4\baselineskip}%
     #1%
 }
 
-%% Enhanced footnote management for amendments
+%% Enhanced footnote management for amendments with improved spacing
 \makeatletter
 \renewcommand\@makefntext[1]{%
     \parindent 1em%
@@ -143,14 +155,14 @@
 
 %% Ensure amendments and their footnotes stay together
 \newcommand{\amendmentwithfootnote}[2]{%
-    \needspace{2\baselineskip}%
+    \needspace{3\baselineskip}%
     #1\footnote{#2}%
 }
 
-%% Page layout optimization for text-footnote balance
+%% Enhanced page layout optimization for text-footnote balance
 \RequirePackage{geometry}
 \geometry{
-    footnotesep=0.7em,
+    footnotesep=0.8em,
     marginparsep=0.5em
 }
 
@@ -179,7 +191,48 @@
     \setlength{\itemsep}{0.3em plus 0.1em minus 0.1em}%
 }
 
+%% Enhanced section heading management
+\newcommand{\sectionheadingspacing}{%
+    \setlength{\parskip}{1em plus 0.3em minus 0.2em}%
+}
+
 %% Apply constitutional spacing
 \AtBeginDocument{\constitutionalspacing}
+
+%% Two-sided layout helpers
+\newcommand{\cleardoublepage}{%
+    \clearpage
+    \if@twoside
+        \ifodd\c@page
+        \else
+            \hbox{}%
+            \vspace*{\fill}%
+            \begin{center}%
+                \textit{[This page intentionally left blank]}%
+            \end{center}%
+            \vspace{\fill}%
+            \thispagestyle{empty}%
+            \newpage
+        \fi
+    \fi
+}
+
+%% Enhanced footnote spacing control
+\renewcommand{\footnoterule}{%
+    \kern-3pt
+    \vspace{0.5em}%
+    \hrule width 0.4\columnwidth height 0.4pt
+    \vspace{0.3em}%
+    \kern 2.6pt
+}
+
+%% Improved constitutional section command
+\renewcommand{\ConstitutionalSection}[1]{%
+    \needspace{4\baselineskip}%
+    \vspace{1em plus 0.3em minus 0.2em}%
+    {\centering\normalsize\bfseries #1\par}%
+    \nopagebreak[4]%
+    \vspace{0.7em plus 0.2em minus 0.1em}%
+}
 
 %% End of configuration
