--- a/content/articles/article_15.tex
+++ b/content/articles/article_15.tex
@@ -11,5 +11,5 @@
     
     \Clause{Nothing in this article shall prevent the State from making any special provision for women and children.}
     
-    \Clause{\Inserted{Nothing in this article or in clause (2) of article 29 shall prevent the State from making any special provision for the advancement of any socially and educationally backward classes of citizens or for the Scheduled Castes and the Scheduled Tribes.}{Constitution (First Amendment) Act, 1951, s. 2 \wef{18-6-1951}}}
+    \InsertedClause{Nothing in this article or in clause (2) of article 29 shall prevent the State from making any special provision for the advancement of any socially and educationally backward classes of citizens or for the Scheduled Castes and the Scheduled Tribes.}{Constitution (First Amendment) Act, 1951, s. 2 \wef{18-6-1951}}
 }
