--- a/content/parts/part_iii.tex
+++ b/content/parts/part_iii.tex
@@ -2,17 +2,17 @@
 
 \Part{III}{FUNDAMENTAL RIGHTS}
 
-\section*{General}
+\ConstitutionalSection{General}
 \input{content/articles/article_12}
 \input{content/articles/article_13}
 
-\section*{Right to Equality}
+\ConstitutionalSection{Right to Equality}
 \input{content/articles/article_14}
 \input{content/articles/article_15}
 
-\section*{Right to Freedom}
+\ConstitutionalSection{Right to Freedom}
 \input{content/articles/article_19}
 
-\section*{Right to Life and Personal Liberty}
+\ConstitutionalSection{Right to Life and Personal Liberty}
 \input{content/articles/article_21}
 \input{content/articles/article_21a}
