--- a/content/preamble.tex
+++ b/content/preamble.tex
@@ -36,7 +36,7 @@
         \vspace{0.5em}
         
         FRATERNITY assuring the dignity of the individual and the 
-        \Inserted{Constitution (Forty-second Amendment) Act, 1976, Preamble \wef{3-1-1977}}{unity and integrity} 
+        \Inserted{unity and integrity}{Constitution (Forty-second Amendment) Act, 1976, Preamble \wef{3-1-1977}} 
         of the Nation;
         
         \vspace{1.5em}
