--- a/content/articles/article_13.tex
+++ b/content/articles/article_13.tex
@@ -11,5 +11,5 @@
     
     \SubClause{"laws in force" includes laws passed or made by a Legislature or other competent authority in the territory of India before the commencement of this Constitution and not previously repealed, notwithstanding that any such law or any part thereof may not be then in operation either at all or in particular areas.}
     
-    \Clause{\Inserted{Nothing in this article shall apply to any amendment of this Constitution made under article 368.}{Constitution (Twenty-fifth Amendment) Act, 1971, s. 3 \wef{20-4-1972}}}
+    \InsertedClause{Nothing in this article shall apply to any amendment of this Constitution made under article 368.}{Constitution (Twenty-fifth Amendment) Act, 1971, s. 3 \wef{20-4-1972}}
 }
