--- a/main.tex
+++ b/main.tex
@@ -1,10 +1,10 @@
 %% Main document for Constitution of India
-%% Using Source of India LaTeX Class v1.0
+%% Using Source of India LaTeX Class v1.1 (Fixed Version)
 %% This is the main working document - NOT a sample
 
-\documentclass[a4paper,12pt,showamendments]{soi}
+\documentclass[a4paper,12pt,showamendments,twoside]{soi}
 
-%% Load configuration
+%% Load enhanced configuration
 \input{config}
 
 %% Document metadata
@@ -15,6 +15,7 @@
 \begin{document}
 
 %% Front matter
+\frontmatter
 \pagenumbering{roman}
 
 %% Title page
@@ -53,12 +54,13 @@
 
 %% Table of Contents
 \tableofcontents
-\clearpage
+\cleardoublepage
 
-%% Preamble
+%% Preamble using fixed modular file
 \input{content/preamble}
 
 %% Main content - switch to Arabic numbering
+\mainmatter
 \pagenumbering{arabic}
 
 %% Include all Parts using modular structure
@@ -69,7 +71,7 @@
     %% PART II - CITIZENSHIP  
     \input{content/parts/part_ii}
     
-    %% PART III - FUNDAMENTAL RIGHTS
+    %% PART III - FUNDAMENTAL RIGHTS (with fixed constitutional sections)
     \input{content/parts/part_iii}
     
     %% TODO: Add remaining parts as they are completed
@@ -100,7 +102,8 @@
 
 %% Include all Schedules using modular structure
 \ifcompileschedules
-    \clearpage
+    \backmatter
+    \cleardoublepage
     \appendix
     
     %% All Schedules
@@ -122,22 +125,31 @@
 
 %% Document completion status and notes
 \ifcompilepart
-    \clearpage
+    \cleardoublepage
     \section*{Document Status}
     
     \subsection*{Compilation Status}
-    This document is a work in progress. Current status:
+    This document is a work in progress using the enhanced SOI LaTeX Class v1.1. Current status:
     
     \subsubsection*{Completed Parts}
     \begin{itemize}
     \item Part I: The Union and Its Territory (Articles 1-4)
     \item Part II: Citizenship (Articles 5-11)  
-    \item Part III: Fundamental Rights (Articles 12-35) - Partially completed
+    \item Part III: Fundamental Rights (Articles 12-35) - Partially completed with fixed amendment system
     \end{itemize}
     
     \subsubsection*{Completed Schedules}
     \begin{itemize}
-    \item First Schedule: The States (Partially completed)
+    \item First Schedule: The States (Partially completed with fixed amendment syntax)
+    \end{itemize}
+    
+    \subsubsection*{Recent Improvements (v1.1)}
+    \begin{itemize}
+    \item \textbf{Fixed Amendment System}: Amendment text now appears in main document with citations in footnotes
+    \item \textbf{Two-sided Layout}: Proper binding offset and outer margin headers
+    \item \textbf{Enhanced Typography}: Constitutional sections properly sized and positioned
+    \item \textbf{Improved Footnotes}: Better spacing above and below separator line
+    \item \textbf{Page Management}: Section headings stay with their articles
     \end{itemize}
     
     \subsubsection*{Remaining Work}
@@ -145,26 +157,54 @@
     \item Parts IV through XXII (19 parts remaining)
     \item Schedules II through XII (11 schedules remaining) 
     \item Complete article content for existing parts
-    \item Full amendment tracking and citations
+    \item Full amendment tracking and citations using fixed syntax
     \item Cross-references and indexing
     \end{itemize}
     
     \subsection*{Usage Notes}
     \begin{itemize}
-    \item Use \texttt{showamendments} class option to display amendment footnotes
+    \item Use \texttt{showamendments} class option to display corrected amendment footnotes
     \item Use \texttt{hideamendments} class option to hide amendment information
+    \item Use \texttt{twoside} class option for proper two-sided printing (recommended)
     \item Set \texttt{\textbackslash{}compilepartfalse} in config.tex to skip parts during compilation
     \item Set \texttt{\textbackslash{}compileschedulesfalse} in config.tex to skip schedules during compilation
     \end{itemize}
     
+    \subsection*{Amendment System Usage (Fixed in v1.1)}
+    \begin{itemize}
+    \item \texttt{\textbackslash{}Inserted\{text\}\{citation\}} - Inserts text in main document, citation in footnote
+    \item \texttt{\textbackslash{}Substituted\{new\}\{old\}\{citation\}} - Shows new text in main, old text and citation in footnote
+    \item \texttt{\textbackslash{}InsertedClause\{text\}\{citation\}} - For inserted clauses with proper numbering
+    \item \texttt{\textbackslash{}Omitted\{citation\}} - Shows omitted content when \texttt{showomitted} option is used
+    \item \texttt{\textbackslash{}ConstitutionalSection\{title\}} - For section headings like "Right to Equality"
+    \end{itemize}
+    
     \subsection*{Contributing}
-    To add new articles, parts, or schedules:
+    To add new articles, parts, or schedules using the fixed system:
     \begin{enumerate}
     \item Create the appropriate .tex file in the correct directory
     \item Use the \texttt{\textbackslash{}DeclareArticle}, \texttt{\textbackslash{}Article}, \texttt{\textbackslash{}Part}, or \texttt{\textbackslash{}Schedule} commands
     \item Include the file in the appropriate part file using \texttt{\textbackslash{}input}
-    \item Add amendment information using \texttt{\textbackslash{}Amendment}, \texttt{\textbackslash{}Inserted}, \texttt{\textbackslash{}Substituted}, etc.
+    \item Add amendment information using the corrected commands with proper parameter order
+    \item Use \texttt{\textbackslash{}ConstitutionalSection} for major section headings within parts
     \end{enumerate}
+    
+    \subsection*{Compilation}
+    \begin{itemize}
+    \item Use \texttt{pdflatex main.tex} (run twice for cross-references)
+    \item Or use the enhanced compilation script: \texttt{tools/compile\_fixed.sh}
+    \item For cleanup: \texttt{tools/cleanup.sh}
+    \end{itemize}
+    
+    \subsection*{Document Features}
+    \begin{itemize}
+    \item Two-sided layout optimized for binding
+    \item Article names on outer margins (away from binding)
+    \item Proper footnote positioning and spacing
+    \item Constitutional section headings with appropriate typography
+    \item Enhanced page break management
+    \item Corrected amendment display system
+    \end{itemize}
 \fi
 
 \end{document}
