--- a/main.tex
+++ b/main.tex
@@ -1,16 +1,4 @@
-    {\Huge\bfseries THE CONSTITUTION OF INDIA}
-    
-    \vspace{1cm}
-    {\Large As amended up to the One Hundred and Fifth Amendment Act, 2021}
-    
-    \vspace{2cm}
-    {\large Adopted by the Constituent Assembly on 26th November, 1949}
-    
-    \vfill
-    
-    {\large Government of India\\Ministry of Law and Justice}
-    
-    \vspace{%% Main document for Source of India Constitution
+%% Main document for Source of India Constitution
 %% Work in progress - currently includes selected parts and schedules
 
 \documentclass[a4paper,showamendments]{soi}
@@ -68,7 +56,7 @@
 % Part X: The Scheduled and Tribal Areas
 % Part XI: Relations between the Union and the States
 % Part XII: Finance, Property, Contracts and Suits
-% Part XIII: Trade, Commerce and Intercourse within the territory of India
+% Part XIII: Trade, Commerce and intercourse within the territory of India
 % Part XIV: Services under the Union and the States
 % Part XIVA: Tribunals
 % Part XV: Elections
