--- a/content/articles/article_014.tex
+++ b/content/articles/article_014.tex
@@ -2,14 +2,15 @@
 %% Can be compiled independently from any directory level
 
 % Path-aware configuration loading
-\@ifundefined{documentclass}{
+\ifx\documentclass\undefined\else
     \documentclass[a4paper,showamendments]{soi}
     \IfFileExists{config.tex}{\input{config}}{\IfFileExists{../config.tex}{\input{../config}}{\IfFileExists{../../config.tex}{\input{../../config}}{}}}
     \begin{document}
-}{}
+    \def\soistandalone{true}
+\fi
 
 \soiArticle{Equality before law}{%
     The State shall not deny to any person equality before the law or the equal protection of the laws within the territory of India.
 }
 
-\@ifundefined{documentclass}{}{\end{document}}
+\ifdefined\soistandalone\end{document}\fi
