--- a/content/articles/article_021a.tex
+++ b/content/articles/article_021a.tex
@@ -2,14 +2,15 @@
 %% Can be compiled independently from any directory level
 
 % Path-aware configuration loading
-\@ifundefined{documentclass}{
+\ifx\documentclass\undefined\else
     \documentclass[a4paper,showamendments]{soi}
     \IfFileExists{config.tex}{\input{config}}{\IfFileExists{../config.tex}{\input{../config}}{\IfFileExists{../../config.tex}{\input{../../config}}{}}}
     \begin{document}
-}{}
+    \def\soistandalone{true}
+\fi
 
 \soiArticle{\soiAmendment{Right to education}\soiAmendmentData{Constitution (Eighty-sixth Amendment) Act, 2002, s. 2 \soiWef{1-4-2010}}}{%
     \soiAmendment{The State shall provide free and compulsory education to all children of the age of six to fourteen years in such manner as the State may, by law, determine.}\soiAmendmentData{Constitution (Eighty-sixth Amendment) Act, 2002, s. 2 \soiWef{1-4-2010}}
 }
 
-\@ifundefined{documentclass}{}{\end{document}}
+\ifdefined\soistandalone\end{document}\fi
